--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jotai": "^2.8.3",
     "jotai-devtools": "^0.10.0",
     "lucide-react": "^0.394.0",
+    "posthog-js": "^1.139.3",
     "react": "^18.2.0",
     "react-dice-roll": "^1.2.2",
     "react-dom": "^18.2.0",
