--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dice-roll": "^1.2.2",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "react-use": "^17.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
